--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,48 @@
   	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   
+  <build>
+  	<plugins>
+  		<plugin>
+  			<artifactId>maven-jar-plugin</artifactId>
+  			<version>3.0.2</version>
+  			<configuration>
+  				<archive>
+  					<manifest>
+  						<addClasspath>true</addClasspath>
+  						<classpathPrefix>lib/</classpathPrefix>
+  						<mainClass>com.lollywollydoodle.polylinetopath.App</mainClass>
+  					</manifest>
+  				</archive>
+  			</configuration>
+  		</plugin>
+  		<plugin>
+  			<artifactId>maven-assembly-plugin</artifactId>
+  			<version>3.0.0</version>
+  			<dependencies>
+  				<dependency>
+  					<groupId>com.lollywollydoodle</groupId>
+  					<artifactId>jarjar-assembly-descriptor</artifactId>
+  					<version>0.0.1-SNAPSHOT</version>
+  				</dependency>
+  			</dependencies>
+  			<executions>
+  				<execution>
+  					<phase>package</phase>
+  					<goals>
+  						<goal>single</goal>
+  					</goals>
+  					<configuration>
+  						<descriptorRefs>
+  							<descriptorRef>jarjar</descriptorRef>
+  						</descriptorRefs>
+  					</configuration>
+  				</execution>
+  			</executions>
+  		</plugin>
+  	</plugins>
+  </build>
+  
   <dependencies>
   	<dependency>
   		<groupId>org.apache.xmlgraphics</groupId>
