--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.lollywollydoodle</groupId>
   <artifactId>polyline-to-path</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   
   <name>polyline-to-path</name>
   
@@ -50,7 +50,7 @@
   				<dependency>
   					<groupId>com.lollywollydoodle</groupId>
   					<artifactId>jarjar-assembly-descriptor</artifactId>
-  					<version>0.0.1-SNAPSHOT</version>
+  					<version>1.0.0</version>
   				</dependency>
   			</dependencies>
   			<executions>
